--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "~4.16.1",
     "mongodb": "^3.6.4"
   }
