--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "~4.16.1",
+    "express-session": "^1.17.1",
     "mongodb": "^3.6.4",
     "passport": "^0.4.1",
     "passport-http": "^0.3.0"
